products CRUD implemented

--- a/client/index.html
+++ b/client/index.html
@@ -43,6 +43,7 @@
   <!-- Partial JS -->
   <script src="partial/home/home.js"></script>
   <script src="partial/customers/customers.js"></script>
+  <script src="partial/products/products.js"></script>
   <!-- Add New Partial JS Above -->
 
   <div>
@@ -64,7 +65,7 @@
         <div class="navbar-collapse collapse navbar-inverse-collapse">
           <ul class="nav navbar-nav">
             <li><a href="/#/customers">Customers</a></li>
-            <li><a href="#">Products</a></li>
+            <li><a href="/#/products">Products</a></li>
             <li><a href="#">Sales</a></li>
             <li><a href="#">Dashboard</a></li>
           </ul>
