added initial sales order module

--- a/client/_SpecRunner.html
+++ b/client/_SpecRunner.html
@@ -16,6 +16,8 @@
   
   <script src="bower_components/jquery/jquery.js"></script>
   
+  <script src="bower_components/select2/select2.js"></script>
+  
   <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
   
   <script src="bower_components/underscore/underscore.js"></script>
@@ -34,15 +36,27 @@
   
   <script src="bower_components/angular-ui-utils/ui-utils.js"></script>
   
+  <script src="bower_components/angular-ui-select2/src/select2.js"></script>
+  
   <script src="js/setup.js"></script>
   
   <script src="partial/home/home.js"></script>
   
   <script src="partial/customers/customers.js"></script>
   
+  <script src="partial/customers/services/customers-service.js"></script>
+  
+  <script src="partial/products/products.js"></script>
+  
+  <script src="partial/products/services/products-service.js"></script>
+  
+  <script src="partial/sales/sales.js"></script>
+  
+  <script src="partial/sales/services/sales-service.js"></script>
+  
   <script src="bower_components/angular-mocks/angular-mocks.js"></script>
   
-  <script src="partial/products/products-spec.js"></script>
+  <script src="partial/sales/sales-spec.js"></script>
   
   <script src=".grunt/grunt-contrib-jasmine/reporter.js"></script>
   
