client - initial dashboard implementation

--- a/client/_SpecRunner.html
+++ b/client/_SpecRunner.html
@@ -22,8 +22,6 @@
   
   <script src="bower_components/underscore/underscore.js"></script>
   
-  <script src="bower_components/moment/moment.js"></script>
-  
   <script src="bower_components/angular/angular.js"></script>
   
   <script src="bower_components/angular-route/angular-route.js"></script>
@@ -38,25 +36,35 @@
   
   <script src="bower_components/angular-ui-select2/src/select2.js"></script>
   
+  <script src="bower_components/moment/min/moment.min.js"></script>
+  
+  <script src="bower_components/d3/d3.min.js"></script>
+  
+  <script src="bower_components/angular-charts/dist/angular-charts.min.js"></script>
+  
   <script src="js/setup.js"></script>
+  
+  <script src="partial/customers/services/customers-service.js"></script>
+  
+  <script src="partial/products/services/products-service.js"></script>
+  
+  <script src="partial/sales/services/sales-service.js"></script>
+  
+  <script src="partial/dashboard/services/dashboard-service.js"></script>
   
   <script src="partial/home/home.js"></script>
   
   <script src="partial/customers/customers.js"></script>
   
-  <script src="partial/customers/services/customers-service.js"></script>
-  
   <script src="partial/products/products.js"></script>
-  
-  <script src="partial/products/services/products-service.js"></script>
   
   <script src="partial/sales/sales.js"></script>
   
-  <script src="partial/sales/services/sales-service.js"></script>
+  <script src="partial/dashboard/dashboard.js"></script>
   
   <script src="bower_components/angular-mocks/angular-mocks.js"></script>
   
-  <script src="partial/sales/sales-spec.js"></script>
+  <script src="partial/dashboard/dashboard-spec.js"></script>
   
   <script src=".grunt/grunt-contrib-jasmine/reporter.js"></script>
   
