client - dashboard implemented

--- a/client/_SpecRunner.html
+++ b/client/_SpecRunner.html
@@ -42,6 +42,8 @@
   
   <script src="bower_components/angular-charts/dist/angular-charts.min.js"></script>
   
+  <script src="bower_components/angular-socket-io/socket.js"></script>
+  
   <script src="js/setup.js"></script>
   
   <script src="partial/customers/services/customers-service.js"></script>
@@ -51,6 +53,8 @@
   <script src="partial/sales/services/sales-service.js"></script>
   
   <script src="partial/dashboard/services/dashboard-service.js"></script>
+  
+  <script src="partial/common/services/socket-io-service.js"></script>
   
   <script src="partial/home/home.js"></script>
   
