removed 'watch' from controllers

--- a/client/_SpecRunner.html
+++ b/client/_SpecRunner.html
@@ -68,7 +68,7 @@
   
   <script src="bower_components/angular-mocks/angular-mocks.js"></script>
   
-  <script src="partial/home/home-spec.js"></script>
+  <script src="partial/products/products-spec.js"></script>
   
   <script src=".grunt/grunt-contrib-jasmine/reporter.js"></script>
   
