IP digital ocean

--- a/client/index.html
+++ b/client/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-  <script src="http://localhost:3000/socket.io/socket.io.js"></script>
+  <!-- <script src="http://188.226.179.201:3000/socket.io/socket.io.js"></script> -->
 
 
   <!-- Livereload script for development only (stripped during dist build) -->
@@ -38,6 +38,7 @@
 
   <!-- Main App JS -->
   <script src="js/setup.js"></script>
+  <script src="js/lib/socket.io.js"></script>
 
   <!-- Service JS -->
   <script src="partial/customers/services/customers-service.js"></script>
@@ -79,10 +80,10 @@
 
         <div class="navbar-collapse collapse navbar-inverse-collapse">
           <ul class="nav navbar-nav">
-            <li><a href="/#/customers">Customers</a></li>
-            <li><a href="/#/products">Products</a></li>
-            <li><a href="/#/sales">Sales</a></li>
-            <li><a href="/#/dashboard">Dashboard</a></li>
+            <li><a href="#/customers">Customers</a></li>
+            <li><a href="#/products">Products</a></li>
+            <li><a href="#/sales">Sales</a></li>
+            <li><a href="#/dashboard">Dashboard</a></li>
           </ul>
         </div>
       </div>
