IP digital ocean

--- a/client/_SpecRunner.html
+++ b/client/_SpecRunner.html
@@ -46,6 +46,8 @@
   
   <script src="js/setup.js"></script>
   
+  <script src="js/lib/socket.io.js"></script>
+  
   <script src="partial/customers/services/customers-service.js"></script>
   
   <script src="partial/products/services/products-service.js"></script>
@@ -68,7 +70,7 @@
   
   <script src="bower_components/angular-mocks/angular-mocks.js"></script>
   
-  <script src="partial/products/products-spec.js"></script>
+  <script src="js/setup-spec.js"></script>
   
   <script src=".grunt/grunt-contrib-jasmine/reporter.js"></script>
   
